# iPHAsimulator

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NEW_FILES_RATIONALE.md  QA_REVIEW.md  README.md  REFACTORING.md  pyproject.toml  requirements.txt  setup.py
compat/: README.md  __init__.py  sw_analysis.py  sw_basic_functions.py  sw_build_systems.py  sw_charge_benchmarking.py  sw_complex_fluid_models.py  sw_custom_decorators.py  sw_depreceated.py  sw_directories.py  sw_file_formatter.py  sw_openmm.py  sw_orca.py
dev/: README.md
docs/: analysing_polymer_systems.rst  conf.py  filepath_manager_guide.rst  index.rst  installation.rst  introduction.rst  module_guides.rst  modules.rst  packagecontents.rst  requirements.txt  simulating_phas.rst  simulating_phas_example_script.rst  simulation_engine_guide.rst  system_builder_guide.rst  trajectory_analyzer_guide.rst
examples/: 01_hello_pdb.py  02_smiles_to_structure.py  03_molecular_properties.py  04_build_polymer_system.py  05_analyze_trajectory.py  README.md
legacy/: MIGRATION_GUIDE.md  README.md  deprecated_functions.py
modules/: README.md  __init__.py  charge_calculator.py  complex_fluid_models_refactored.py  config.py  decorators.py  filepath_manager.py  input_generator.py  molecule_builder.py  quantum_calculator.py  simulation_engine.py  system_builder.py  trajectory_analyzer.py
pdb_files/: residue_codes.csv
python_scripts/: simple_md_run.py
tutorials/: README.md  Tutorial_4_Building_Systems_with_Polymers.ipynb
