[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "satisfaction-simulator"
version = "1.1.0"
description = "SatisPHAction Simulator: Molecular Dynamics simulations for polyhydroxyalkanoate (PHA) systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel J. York", email = "support@martinmartinezlab.com"},
    {name = "Isaac Vidal-Daza"},
    {name = "Francisco Martin-Martinez"},
]
maintainers = [
    {name = "Daniel J. York", email = "support@martinmartinezlab.com"},
]
keywords = [
    "molecular-dynamics",
    "polymer-simulations",
    "biopolymers",
    "pha",
    "polyhydroxyalkanoates",
    "computational-chemistry",
    "openmm",
    "amber",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Multimedia :: Graphics :: 3D Visualization",
]

dependencies = [
    "numpy>=1.19.0",
    "pandas>=2.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
simulation = [
    "openmm>=7.7",
    "parmed>=3.3",
    "rdkit>=2021.03",
    "openbabel-wheel>=3.1.1",
    "MDAnalysis>=2.0",
]
quantum = [
    "nglview>=3.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]
all = [
    "satisfaction-simulator[simulation,quantum,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/MMLabCodes/polymersimulator"
Documentation = "https://polymersimulator.readthedocs.io/"
Repository = "https://github.com/MMLabCodes/polymersimulator.git"
"Issue Tracker" = "https://github.com/MMLabCodes/polymersimulator/issues"
Changelog = "https://github.com/MMLabCodes/polymersimulator/releases"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
